--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Navbar.cshtml
@@ -26,18 +26,21 @@
         <button class="header-serach d-md-none border-0">
             <img class="search-logo" id="search-btn" src="~/images/search.png" alt="#">
         </button>
-        <img class="rounded-circle user-img" src="~/images/user1.png" alt="#">
-        <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
+        @if (UserName != null)
+        {
+            <img class="rounded-circle user-img" src="~/images/user1.png" alt="#">
+            <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">
-            <span> @UserName</span>
+                <span> @UserName</span>
 
-            <img class="m-1" src="~/images/drop-down.png" alt="#">
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" asp-action="Logout" asp-controller="Home">Logout</a></li>
-        </ul>
+                <img class="m-1" src="~/images/drop-down.png" alt="#">
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                 <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" asp-action="Logout" asp-controller="Home">Logout</a></li>
+            </ul>
+        }
         @if (UserName == null)
         {
             <div class="d-inline">
