--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
@@ -5,10 +5,12 @@
 *@
 @{
     var UserName = Context.Session.GetString("firstName");
+    var missionCnt = ViewBag.missionCount;
 }
 
-<partial name="_Navbar" />
 
+<partial name="_Navbar" />
+<input type = "hidden" value = "@missionCnt"  id ="missionCount"/>
 <!-- third section  -->
 <section class="d-none d-md-inline">
     <div class="third-div container d-none" id="filterOptionArea">
@@ -17,23 +19,28 @@
         </ul>
             <button class="border-0 clear-btn">Clear All</button>
     </div>
+
 </section>
 
 <!-- forth section  -->
 <section class="mt-3">
     <div class="d-flex container forth-div justify-content-between flex-wrap">
         <div class="d-flex gap-1">
-            Explore<span>@Model.MissionList.Count missions</span>
+            Explore<span id="filterMissions"> </span> missions
         </div>
         <div class="d-flex">
 
-            <select class="form-select select-btn">
+            <select class="form-select select-btn" id="sortByFilter">
                 <option selected disabled>Sort by</option>
                 <option value="1">Newest</option>
                 <option value="2">Oldest</option>
                 <option value="3">Lowest available seats</option>
                 <option value="4">Highest available seats</option>
+                @if(UserName != null)
+                {
+                    
                 <option value="5">Sort by my favourate</option>
+                }
                 <option value="6">Sort by deadline</option>
             </select>
             <button class="grid-btn d-none d-md-block">
@@ -53,7 +60,7 @@
 <!-- Pagination  -->
 
 <ul class="pagination mt-5 d-flex justify-content-center">
-    <li class="page-item">
+    @*    <li class="page-item">
         <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
         </a>
@@ -62,14 +69,14 @@
         <a class="page-link" href="#" aria-label="Next">
             <img src="~/images/left.png" alt="">
         </a>
-    </li>
+    </li>*@
 
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+   @* <li class="page-item"><a class="page-link" id ="pageNumber" href="#"></a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item"><a class="page-link" href="#">5</a></li>
-    <li class="page-item">
+    <li class="page-item"><a class="page-link" href="#">5</a></li>*@
+    @*<li class="page-item">
         <a class="page-link" href="#" aria-label="Next">
             <img src="~/images/right-arrow1.png" alt="">
         </a>
@@ -78,7 +85,7 @@
         <a class="page-link" href="#" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
         </a>
-    </li>
+    </li>*@
 </ul>
 
 
