--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model CIPlatform.entities.ViewModels.IndexViewModel
 @{
     var UserName = Context.Session.GetString("firstName");
+    var missionCount = ViewBag.missionCnt;
 }
 <!-- grid and list view  -->
 <section class="mt-3 container p-0" id="mainContent">
     <!-- grid view  -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 grid-view">
-
+        <input type="hidden" value="@missionCount" id="filterMissionCnt" />
         @foreach (var missions in Model.MissionList)
         {
             <div class="col grid-mission">
@@ -64,7 +65,7 @@
                                     <div class="d-flex align-items-center">
                                         <img class='h-50' src="~/images/Seats-left.png" alt="#">
                                         <div class="ms-2">
-                                            <p class="m-0 p-0 fw-bold">10</p>
+                                            <p class="m-0 p-0 fw-bold">@missions.SeatsLeft</p>
                                             <span class="m-0 p-0 seats-left">Seats left</span>
                                         </div>
                                     </div>
@@ -91,7 +92,7 @@
                                     <div class="d-flex align-items-center">
                                         <img class='h-50' src="~/images/Seats-left.png" alt="#">
                                         <div class="ms-2">
-                                            <p class="m-0 p-0 fw-bold">10</p>
+                                            <p class="m-0 p-0 fw-bold">@missions.SeatsLeft</p>
                                             <span class="m-0 p-0 seats-left">Seats left</span>
                                         </div>
                                     </div>
