--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
@@ -64,8 +64,8 @@
         <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
         </a>
-    </li>
-    <li class="page-item">
+    </li>*@
+    @*<li class="page-item">
         <a class="page-link" href="#" aria-label="Next">
             <img src="~/images/left.png" alt="">
         </a>
@@ -80,8 +80,8 @@
         <a class="page-link" href="#" aria-label="Next">
             <img src="~/images/right-arrow1.png" alt="">
         </a>
-    </li>
-    <li class="page-item">
+    </li>@**@
+    @*<li class="page-item">
         <a class="page-link" href="#" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
         </a>
