--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Layout.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/registration-responsive.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 
-    @*<link rel="stylesheet" href="~/CIPlatformWeb.styles.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/CIPlatformWeb.styles.css" asp-append-version="true" />
 </head>
 <body>
     
