--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
@@ -49,7 +49,7 @@
         @if (UserName == null)
         {
             <div class="d-inline">
-                <a class="btn btn-outline-danger rounded" asp-action="Login"  asp-controller="Home">Login</a>
+                <a class="btn btn-outline-danger rounded" asp-action ="Login" asp-controller="Home" asp-area = "Users">Login</a>
             </div>
         }
         
@@ -59,7 +59,7 @@
 
 <section class="container mt-3 border-top p-5">
     <div class="d-flex flex-column flex-sm-column flex-lg-row gap-5 ">
-        <div>
+        <div class="div-left">
             <img class="poster-img mb-1" src="@Model.ThumbnailURL"
                  alt="">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -106,21 +106,21 @@
         </div>
 
         <div>
-            <div class="title-heading">CSR initiative stands for Coffee & Farmer Equity</div>
-            <p class="descr mt-2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam.
+            <div class="title-heading">@Model.Title</div>
+            <p class="descr mt-2">@Model.ShortDesc
             </p>
-            <div>
-                <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
-                    Plant 10,000 Trees
+
+            @if (Model.MissionType == false)
+            {
+                <div>
+                    <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
+                    @Model.GoalMissions.GoalObjectiveText
                 </div>
                 <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
                     <div class="d-flex align-items-center">
                         <img class='h-50' src="~/images/Seats-left.png" alt="#">
                         <div class="ms-2">
-                            <p class="m-0 p-0 fw-bold">10</p>
+                            <p class="m-0 p-0 fw-bold">@Model.SeatsLeft</p>
                             <span class="m-0 p-0 seats-left">Seats left</span>
                         </div>
                     </div>
@@ -138,13 +138,43 @@
                     </div>
                 </div>
             </div>
+            }
+            else
+            {
+                <div>
+                    <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
+                        From
+                        @Model.StartDate?.ToString("d") until
+                        @Model.EndDate?.ToString("d")
+                    </div>
+                    <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
+                        <div class="d-flex align-items-center">
+                            <img class='h-50' src="~/images/Seats-left.png" alt="#">
+                            <div class="ms-2">
+                                <p class="m-0 p-0 fw-bold">@Model.SeatsLeft</p>
+                                <span class="m-0 p-0 seats-left">Seats left</span>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <img class="h-50" src="~/images/deadline.png" alt="#">
+                            <div class="ms-2">
+                                <p class="m-0 p-0 fw-bold">@Model.EndDate?.ToString("d")</p>
+                                <span class="m-0 p-0 deadline"> Deadline</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+            <input type="hidden" value="@Model.MissionId" id ="missionId" />
+            
+            <input type="hidden" value="@userId" id="userId" />
 
-
-
-            <div class="d-flex gap-2 m-3 justify-content-md-center">
-                <button class="border rounded-pill  bg-white py-1">
-                    <img src="~/images/heart1.png" alt="">
-                    <span class="font-size">Add to Favourite</span>
+            @if (userId != null)
+            {
+                <div class="d-flex gap-2 m-3 justify-content-md-center">
+                    <button class="border rounded-pill bg-white py-1" id ="addToFavourite">
+                    <img src="~/images/heart1.png" class="fav-img" alt="">
+                    <span class="font-size fav-span">Add to Favourite</span>
 
                 </button>
                 <button class="border rounded-pill bg-white  py-1">
@@ -155,16 +185,20 @@
 
 
             </div>
+            }
 
-
-            <div class="d-flex justify-content-center m-3">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
+            <!-- rating.js file -->
+            <div id="rating" class="d-flex justify-content-center align-items-center position-relative z-1">
+                <input id="star-input-id" type="text" class="rating text-center d-none" data-size="sm" />
             </div>
 
+            @*<div class="d-flex justify-content-center m-3">
+                <img src="~/images/star-empty.png" alt="">
+                <img src="~/images/star-empty.png" alt="">
+                <img src="~/images/star-empty.png" alt="">
+                <img src="~/images/star-empty.png" alt="">
+                <img src="~/images/star-empty.png" alt="">
+            </div>*@
             <div class="row gap-3 ">
                 <div class="border col d-flex flex-column justify-content-between p-0">
                     <div class="ps-1">
@@ -172,7 +206,7 @@
                     </div>
                     <div class="ps-1 info-div">
                         <span> City </span>
-                        <p class="fw-bold">London</p>
+                        <p class="fw-bold">@Model.City.Name</p>
                     </div>
                 </div>
                 <div class="border col d-flex flex-column justify-content-between p-0">
@@ -181,7 +215,7 @@
                     </div>
                     <div class="ps-1 info-div">
                         <span>Theme</span>
-                        <p class="fw-bold">Environment</p>
+                        <p class="fw-bold">@Model.Country.Name</p>
                     </div>
                 </div>
                 <div class="border col d-flex flex-column justify-content-between p-0">
@@ -199,7 +233,7 @@
                     </div>
                     <div class="ps-1 info-div">
                         <span> Organization</span>
-                        <p class="fw-bold ">CSE Network</p>
+                        <p class="fw-bold ">@Model.OrgName</p>
                     </div>
                 </div>
             </div>
@@ -304,10 +338,7 @@
             <!-- organization  -->
             <div class="d-none org-div mt-3">
                 <p class="text-secondary">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quod
-                    molestiae cumque ut, sequi
-                    dolorum repellat. Labore tempore, necessitatibus explicabo atque corrupti voluptates nam ea
-                    facere cum repellat sequi sed?
+                    @Model.OrgDetails
                 </p>
             </div>
             <!-- Comments  -->
@@ -707,4 +738,5 @@
 
 @section Scripts{
     <script src="~/js/missionDetail.js"></script>
+    
 }
