--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
@@ -405,10 +405,10 @@ img {
 }
 
 .caption-badge {
-    display: none;
+    display: none !important;
 }
 .krajee-icon-clear {
-    display: none;
+    display: none !important;
 }
 
 
