--- a/MVC/CI-Platform/CIPlatformWeb/Views/_ViewImports.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CIPlatformWeb
 @using CIPlatformWeb.Models
+@*@using CIPlatform.entities.ViewModels*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
