--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/_Comments.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/_Comments.cshtml
@@ -1,44 +1,18 @@
-﻿
+﻿@model IEnumerable<CIPlatform.entities.ViewModels.CommentViewModel>
 
 
+@foreach (var comment in Model)
+{
     <div class="d-flex gap-3 bg-white">
         <div>
             <img class="rounded-pill" src="~/images/volunteer3.png" alt="">
         </div>
         <div>
-            <h3>Margaret walsh</h3>
-            <span>Monday, Oct 21, 2019</span>
-            <p>This is helpful mission</p>
+            <h3>@comment.User.FirstName</h3>
+            <span>@comment.CreatedAt.ToString("d")</span>
+            <p>@comment.CommentMsg</p>
         </div>
     </div>
+}
 
-    <div class="d-flex gap-3 bg-white mt-3">
-        <div>
-            <img class="rounded-pill" src="~/images/volunteer3.png" alt="">
-        </div>
-        <div>
-            <h3>Margaret walsh</h3>
-            <span>Monday, Oct 21, 2019</span>
-            <p>This is helpful mission</p>
-        </div>
-    </div>
-    <div class="d-flex gap-3 bg-white mt-3">
-        <div>
-            <img class="rounded-pill" src="~/images/volunteer3.png" alt="">
-        </div>
-        <div>
-            <h3>Margaret walsh</h3>
-            <span>Monday, Oct 21, 2019</span>
-            <p>This is helpful mission</p>
-        </div>
-    </div>
-    <div class="d-flex gap-3 bg-white mt-3">
-        <div>
-            <img class="rounded-pill" src="~/images/volunteer3.png" alt="">
-        </div>
-        <div>
-            <h3>Margaret walsh</h3>
-            <span>Monday, Oct 21, 2019</span>
-            <p>This is helpful mission</p>
-        </div>
-    </div>
+
