--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model CIPlatform.entities.ViewModels.IndexViewModel
 @{
     var UserName = Context.Session.GetString("firstName");
+    var userId = Context.Session.GetString("userId");
     var missionCount = ViewBag.missionCnt;
 }
 <!-- grid and list view  -->
@@ -14,12 +15,12 @@
 
                 <div class="card">
                     <img src="@missions.ThumbnailURL"
-                     class="card-img-top position-relative" alt="...">
-                    @if (missions.Status == true && UserName != null)
+                     class="card-img-top position-relative default-img" alt="...">
+                    @if (missions.Status == true && UserName != null && missions.MissionApplications.Any(ma => ma.UserId == long.Parse(userId) &&  ma.ApprovalStatus == 1))
                     {
                         <span class="position-absolute mission-status py-2 px-3 rounded-end-pill mt-2">Applied</span>
                     }
-                    @if (missions.Status == false && UserName != null)
+                    @if (missions.Status == false)
                     {
                         <span class="position-absolute mission-status py-2 px-3 rounded-end-pill mt-2">Closed</span>
                     }
@@ -116,112 +117,38 @@
 
 
                         }
-                        <div class="d-flex justify-content-center">
-                            @if (missions.Status == true && UserName != null)
-                            {
-                                <a class="btn apply-btn mt-3 mb-3" asp-action ="Index" asp-route-id ="@missions.MissionId" asp-controller ="MissionDetail">
-                                    View Details <img src="~/images/right-arrow.png"
-                                              alt="#">
-                                </a>
+                        @if (UserName != null)
+                        {
+                            <div class="d-flex justify-content-center">
 
-                            }
-                            else
-                            {
 
-                                <a class="btn apply-btn mt-3 mb-3" asp-action="Index" asp-route-id="@missions.MissionId" asp-controller="MissionDetail">
-                                    Apply <img src="~/images/right-arrow.png"
+                                @if (UserName != null && missions.MissionApplications.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == 1))
+                                {
+
+                                    <a class="btn apply-btn mt-3 mb-3" asp-action="Index" asp-route-id="@missions.MissionId" asp-controller="MissionDetail">
+                                        View Details <img src="~/images/right-arrow.png"
                                        alt="#">
-                                </a>
-                            }
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a class="btn apply-btn mt-3 mb-3" asp-action="Index" asp-route-id="@missions.MissionId" asp-controller="MissionDetail">
+                                        Apply <img src="~/images/right-arrow.png"
+                                       alt="#">
+                                    </a>
 
-                        </div>
+                                }
+
+
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
 
         }
 
-        @*<div class="col">
-        <div class="card">
-        <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-        class="card-img-top position-relative" alt="...">
-        <div class="position-absolute country-div rounded-pill p-2">
-        <img class="" src="~/images/pin1.png" alt="#">
-        <span>Toronto</span>
-        </div>
-        <a href="" class="position-absolute favourate rounded-pill p-1">
-        <img class="" src="~/images/heart.png" alt="#">
-        </a>
-        <a href="" class="position-absolute user-div rounded-pill p-2">
-        <img class="" src="~/images/user.png" alt="#">
-        </a>
-        <span class="theme-name align-text-top py-2 px-4 mx-auto position-relative translate-middle-y">Environment</span>
-        <div class="card-body p-0">
-        <h5 class="card-title mission-title px-3">
-        Grow Trees - on the path to environment
-        sustainability
-        </h5>
-        <p class="card-text mission-desc px-3">
-        Lorem ipsum dolor, sit amet consectetur adipisicing
-        elit.
-        Iusto,
-        ipsa.
-        Sint
-        similique repellendus laboriosam omnis incidunt, sapiente, facilis alias consequatur hic
-        iste
-        nobis
-        voluptatibus! Ipsa molestiae in maxime similique id!
-        </p>
-        <div class="d-flex justify-content-between px-3">
-        <div class="org-name">Tree Canada</div>
-        <div>
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/star.png" alt="">
-        <img src="~/images/star.png" alt="">
-        </div>
-        </div>
-        <div>
-        <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
-        From
-        Plant 10,000 Trees
-        </div>
-        <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
-        <div class="d-flex align-items-center">
-        <img class='h-50' src="~/images/Seats-left.png" alt="#">
-        <div class="ms-2">
-        <p class="m-0 p-0 fw-bold">10</p>
-        <span class="m-0 p-0 seats-left">Seats left</span>
-        </div>
-        </div>
-        <div class="d-flex align-items-center">
-        <img class="h-50" src="~/images/achieved.png" alt="#">
-
-        <div class="ms-2">
-        <div class="progress">
-        <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
-        aria-valuemin="0" aria-valuemax="100">
-        </div>
-        </div>
-
-        <span class="m-0 p-0">8000 achieved</span>
-
-        </div>
-        </div>
-        </div>
-        </div>
-        <div class="d-flex justify-content-center">
-        <a href="#" class="btn apply-btn mt-3 mb-3 ">
-        Apply <img src="~/images/right-arrow.png"
-        alt="#">
-        </a>
-        </div>
-        </div>
-        </div>
-        </div>*@
-
-
+      
         <!-- grid view end  -->
 
     </div>
@@ -304,96 +231,6 @@
                 </div>
             </div>
         }
-
-
-
-
-        @*<div class="card">
-        <div class="row">
-        <div class="col-4">
-        <img src="~/images/Animal-welfare-&-save-birds-campaign.png"
-        class="card-img-top position-relative" alt="...">
-        <div class="position-absolute country-list-div rounded-pill p-2">
-        <img class="" src="~/images/pin1.png" alt="#">
-        <span>Toronto</span>
-        </div>
-        <a href="#" class="position-absolute favourate-list rounded-pill p-1">
-        <img class="" src="~/images/heart.png" alt="#">
-        </a>
-        <a href="#" class="position-absolute user-list-div rounded-pill p-2">
-        <img class="" src="~/images/user.png" alt="#">
-        </a>
-        <div class="theme-name align-text-top py-2 px-4 mx-auto translate-middle-y">Animals</div>
-        </div>
-        <div class="card-body col-8 p-0">
-        <h5 class="card-title mission-title p-3 ">
-        Animals welfare & save birds campaign
-
-        </h5>
-        <p class="card-text mission-desc px-3">
-        Lorem ipsum dolor, sit amet consectetur adipisicing
-        elit.
-        Iusto,
-        ipsa.
-        Sint
-        similique repellendus laboriosam omnis incidunt, sapiente, facilis alias consequatur hic
-        iste
-        nobis
-        voluptatibus! Ipsa molestiae in maxime similique id!
-        </p>
-        <div class="d-flex justify-content-between me-3">
-        <div class="mt-3">
-        <div class="d-flex flex-md-column px-3">
-        <div class="org-name">JR Foundation</div>
-        <div class="ps-md-0 ps-4">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        <img src="~/images/selected-star.png" alt="">
-        </div>
-        </div>
-        <div class="d-flex ps-3">
-        <a href="#" class="btn apply-btn mt-3 mb-3">
-        Apply <img src="~/images/right-arrow.png" alt="#">
-        </a>
-        </div>
-        </div>
-        <div>
-        <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
-        From
-        10/01/2019 until
-        25/02/2019
-        </div>
-        <div class="d-flex justify-content-around border-top pt-4 pb-2  px-4">
-        <div class="d-flex align-items-center">
-        <img class='h-50' src="~/images/Seats-left.png" alt="#">
-        <div class="ms-2">
-        <p class="m-0 p-0 fw-bold">10</p>
-        <span class="m-0 p-0 seats-left">Seats left</span>
-        </div>
-        </div>
-        <div class="d-flex align-items-center ms-4">
-        <img class="h-50" src="~/images/achieved.png" alt="#">
-        <div class="ms-2">
-        <div class="progress mt-2">
-        <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
-        aria-valuemin="0" aria-valuemax="100">
-        </div>
-        </div>
-
-
-        <span class="m-0 p-0 deadline">8000 achieved</span>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-
-
-        </div>
-        </div>
-        </div>*@
 
     </div>
 </section>
